# swaddle

./: Cargo.toml  Justfile  PKGBUILD  README.md  swaddle.service
.github/workflows/: ci.yml  test.yml
src/: lib.rs  main.rs
tests/: integration_tests.rs  mock_media_player.py
